--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "encore-ts-starter",
-  "private": true,
+  "name": "url-shortener-be",
   "version": "0.0.1",
-  "description": "Encore Typescript Starter",
-  "license": "MPL-2.0",
-  "type": "module",
+  "description": "Url Shortener Backend",
   "scripts": {
-    "test": "vitest"
+    "build": "tsc",
+    "start": "npx tsc & node dist/index.js"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.5.7",
-    "typescript": "^5.2.2",
-    "vitest": "^1.5.0"
+    "@types/yargs": "^17.0.33",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
-    "encore.dev": "^1.41.2"
-  },
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.13.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "mongoose": "^6.4.4",
+    "yargs": "^17.7.2"
   }
 }
