--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "http-errors": "^2.0.0",
+    "module-alias": "^2.2.3",
     "mongoose": "^6.4.4",
     "yargs": "^17.7.2"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
